Add TreePathScanner